--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry exported="true" kind="lib" path="C:/Users/javku/Downloads/javax.servlet.jsp.jstl-api-1.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/javku/Downloads/javax.servlet.jsp.jstl-1.2.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/javku/Downloads/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/javku/Downloads/javax.servlet-api-3.0.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
